src/recipe/parser/snapshots/rattler_build__recipe__parser__about__test__invalid_license.snap
---
source: src/recipe/parser/about.rs
expression: err
---
  × Failed to parse recipe

Error:   × Parsing: failed to parse SPDX license: invalid character(s)
   ╭─[6:1]
 6 │         about:
 7 │             license: MIT/X derivate
   ·                      ───────┬──────
   ·                             ╰── here
 8 │         
   ╰────

